2007-12-20  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- get_av_transport() takes and returns a proxy rather than an info
	  object.
	- Get/Create the av_transport proxy in the add_media_renderer().
	- Keep the av_transport's playback state in the treemodel.
	- Use 'AVTransport::GetTransportInfo' to retreive the state in the
	  beginning.
	- Implement get_selected_renderer_state().

2007-12-19  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- Replace the GetProtocolInfoData with a duplicate of udn since that
	  is all that is needed in the get_protocol_info_cb().
	- Fix a potential leak.

2007-12-17  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:
	* src/av-cp/renderer-controls.c:

	Replace get_selected_renderer() with get_selected_av_transport().

2007-12-13  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/renderer-controls.c:

	Refactor: Put all the code related to sending the action to
	AVTransport into one function.

2007-12-10  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:

	Add function to get the details about the currently selected item.

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:

	- Keep the proxy for AVTransport service in the renderer combo.
	- Add function to retreive the currently selected renderer and it's
	  AVTransport service and protocolinfo.
	- Add stub for querying the state of the AVTransport of the currently
	  selected renderer.

	* src/av-cp/renderer-controls.c:

	Implement basic rendering controls: Setting the URI, Play, Pause and
	Stop.

2007-12-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* data/gupnp-av-cp.glade:
	* src/av-cp/Makefile.am:
	* src/av-cp/renderer-controls.c:

	Basic skeleton for renderer controls.

2007-11-26  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/playlist-treeview.c:
